fix gap in nav__list

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
   list-style: none;
   justify-content: center;
   line-height: 120px;
-  gap: 30px;
+  gap: 20px;
 }
 
 .nav__list__item {
